[package]
name = "try_hard"
version = "0.1.1"
edition = "2024"
description = """
Malleable error handling for rust.
"""
license = "MIT"
repository = "https://github.com/wuerges/try_hard.git"
authors = ["Emilio Wuerges <wuerges@gmail.com>"]

[dependencies]


[dev-dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.25"
